// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labelledFormComponent exposes a \`focus\` function 1`] = `
Object {
  "configurable": true,
  "enumerable": false,
  "value": [Function],
  "writable": true,
}
`;

exports[`labelledFormComponent exposes a \`value\` getter 1`] = `
Object {
  "configurable": true,
  "enumerable": false,
  "get": [Function],
  "set": [Function],
}
`;

exports[`labelledFormComponent exposes specified proxy methods 1`] = `
Object {
  "configurable": true,
  "enumerable": true,
  "value": [Function],
  "writable": true,
}
`;

exports[`labelledFormComponent renders DOM element children as expected 1`] = `
<div
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      Test Input Field
    </div>
    <input
      class="input"
    />
  </label>
</div>
`;
